# pyoof

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  LICENSE.rst  LONG_DESCRIPTION.rst  MANIFEST  MANIFEST.in  README.rst  actuator_disp.py  aperture.py  aux_functions.py  ez_setup.py  fit_beam.py  main_functions.py  pip-requirements  plot_routines.py  poly_fit.py  readme.md  readme.rst  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  install.rst  license.rst  make.bat
docs/actuator/: index.rst
docs/aperture/: index.rst
docs/telgeometry/: index.rst
docs/zernike/: index.rst
notebooks/: aperture.ipynb  effelsberg_actuators.ipynb  fft_normalization.ipynb  notebooks.mplstyle  oof_holography.ipynb  zernike.ipynb
pyoof/: __init__.py  _astropy_init.py  actuator_disp.py  aperture.py  aux_functions.py  beam_generator.py  config_params.yaml  conftest.py  core.py  fit_beam.py  math_functions.py  plot_routines.py  simulate_beam.py  simulate_data.py  telgeometry.py  test_data_fit.py
pyoof/actuator/: __init__.py  actuator.py
pyoof/aperture/: __init__.py  aperture.py
pyoof/data/: act_effelsberg.csv  config_params.yml  example0.fits  lookup_effelsberg.data  lookup_effelsberg.txt  pyoof.mplstyle
pyoof/telgeometry/: __init__.py  telgeometry.py
pyoof/tests/: coveragerc  setup_package.py  test_aux_functions.py  test_beam_generator.py  test_fit_beam.py  (+4 more)
scripts/: actuator_effelsberg.py  create_lookup.py  fit_beam_effelsberg.py  plot_effelsberg.py  pyoof_effelsberg.py  pyoof_effelsberg.sh  pyoof_effelsberg_mpi.py  pyoof_sim.py  pyoof_simulate_data.py  tools_effelsberg.py
tscripts/: pyoof_effelsberg.py  tools_effelsberg.py
(+20 files in other folders)
