[metadata]
name = pyoof
version = 0.2.4.dev
author = Tomas Cassanelli
author_email = tcassanelli@protonmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
description-file = README.rst
description = pyoof is a Python package which performs out-of-focus (OOF) holography on astronomical beam maps for single-dish radio telescopes.
url = https://github.com/tcassanelli/pyoof
edit_on_github = True
github_project = tcassanelli/pyoof
install_requires = astropy, scipy, matplotlib, numpy, pytest, pyyaml, setuptools

[options]
requires = numpy
zip_safe = False
tests_require = pytest-astropy
setup_requires = numpy>=1.13
install_requires = numpy>=1.13
python_requires = >=3.6

[extras_require]
docs =
    sphinx-astropy
    pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern, sphinx, *parsetab.py

[entry_points]

